# ft_printf

ft_final_var/: Makefile
ft_final_var/libft/srcs/: ft_memalloc.c  ft_putnchar.c  ft_strlen.c
ft_final_var/srcs/: buffer_increase.c  double_calculation.c  ft_itoa.c  ft_printf.c
ft_printf/: Makefile  author
ft_printf 2/libft/srcs/: ft_bzero.c  ft_isspace.c  ft_memset.c  ft_strcpy.c  main.c
ft_printf 2/srcs/: p_transform.c
ft_printf copy/: CMakeLists.txt  Makefile
ft_printf copy/includes/: ft_printf.h
ft_printf copy/libft/: Makefile
ft_printf copy/libft/srcs/: ft_power.c  ft_putchar_fd.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c
ft_printf copy/srcs/: ft_ldtoa_pf.c  num_transform.c
ft_printf/includes/: ft_printf.h
ft_printf/libft/includes/: libft.h
ft_printf/libft/srcs/: ft_atoi.c  ft_isdigit.c  ft_putendl.c  ft_strdup.c
ft_printf/srcs/: calc_double.c  ft_itoa_base.c  ft_ldtoa.c  ft_utoa.c  init_structure.c  parse_continue.c  transform_char.c  transform_pointer.c
ft_printf_final/: Makefile
ft_printf_final/libft/includes/: libft.h
ft_printf_final/libft/srcs/: ft_atoi.c  ft_isnegative.c  ft_memchr.c  ft_putstr_free.c
ft_printf_final/srcs/: ft_ldtoa.c  parse_start.c  transform_number.c  validation.c
ft_printf_prefinal/: CMakeLists.txt
ft_printf_prefinal/libft/srcs/: ft_putchar.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strncpy.c
ft_printf_prefinal/srcs/: ch_transform.c  ft_buffer.c  ft_itoa_pf.c  ft_parse.c  ft_printf.c  ft_utoa_pf.c  is_valid.c  parse.c
